// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AwsMultiAzRegionModule UT input changes should handle name change 1`] = `
"+ region/main.tf
resource "aws_internet_gateway" "igw-changed-region" {
  provider = aws.123-us-east-1
  vpc_id = aws_vpc.vpc-changed-region.id
}

- region/main.tf
resource "aws_internet_gateway" "igw-test-region" {
  provider = aws.123-us-east-1
  vpc_id = aws_vpc.vpc-test-region.id
}

+ region/main.tf
resource "aws_vpc" "vpc-changed-region" {
  provider = aws.123-us-east-1
  cidr_block = "10.0.0.0/8"
  enable_dns_hostnames = true
  enable_dns_support = true
  instance_tenancy = "default"
}

- region/main.tf
resource "aws_vpc" "vpc-test-region" {
  provider = aws.123-us-east-1
  cidr_block = "10.0.0.0/8"
  enable_dns_hostnames = true
  enable_dns_support = true
  instance_tenancy = "default"
}

+ region/outputs.tf
output "igw-changed-region-InternetGatewayArn" {
  value = aws_internet_gateway.igw-changed-region.arn
}

+ region/outputs.tf
output "igw-changed-region-InternetGatewayId" {
  value = aws_internet_gateway.igw-changed-region.id
}

- region/outputs.tf
output "igw-test-region-InternetGatewayArn" {
  value = aws_internet_gateway.igw-test-region.arn
}

- region/outputs.tf
output "igw-test-region-InternetGatewayId" {
  value = aws_internet_gateway.igw-test-region.id
}

+ region/outputs.tf
output "vpc-changed-region-VpcArn" {
  value = aws_vpc.vpc-changed-region.arn
}

+ region/outputs.tf
output "vpc-changed-region-VpcId" {
  value = aws_vpc.vpc-changed-region.id
}

- region/outputs.tf
output "vpc-test-region-VpcArn" {
  value = aws_vpc.vpc-test-region.arn
}

- region/outputs.tf
output "vpc-test-region-VpcId" {
  value = aws_vpc.vpc-test-region.id
}"
`;

exports[`AwsMultiAzRegionModule UT should CUD 1`] = `
"- region/main.tf
provider "aws" {
  alias = "123-us-east-1"
  region = "us-east-1"
}

- region/main.tf
resource "aws_internet_gateway" "igw-test-region" {
  provider = aws.123-us-east-1
  vpc_id = aws_vpc.vpc-test-region.id
}

- region/main.tf
resource "aws_vpc" "vpc-test-region" {
  provider = aws.123-us-east-1
  cidr_block = "10.0.0.0/8"
  enable_dns_hostnames = true
  enable_dns_support = true
  instance_tenancy = "default"
}

- region/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- region/outputs.tf
output "igw-test-region-InternetGatewayArn" {
  value = aws_internet_gateway.igw-test-region.arn
}

- region/outputs.tf
output "igw-test-region-InternetGatewayId" {
  value = aws_internet_gateway.igw-test-region.id
}

- region/outputs.tf
output "vpc-test-region-VpcArn" {
  value = aws_vpc.vpc-test-region.arn
}

- region/outputs.tf
output "vpc-test-region-VpcId" {
  value = aws_vpc.vpc-test-region.id
}

- region/terragrunt.hcl
<empty>

- region/variables.tf
<empty>"
`;

exports[`AwsMultiAzRegionModule UT should CUD tags 1`] = `
"~ region/main.tf resource "aws_internet_gateway" "igw-test-region" {
@@ -4,3 +4,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }

~ region/main.tf resource "aws_vpc" "vpc-test-region" {
@@ -7,3 +7,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }"
`;

exports[`AwsMultiAzRegionModule UT should CUD tags 3`] = `
"~ region/main.tf resource "aws_internet_gateway" "igw-test-region" {
@@ -3,6 +3,2 @@
    vpc_id = aws_vpc.vpc-test-region.id
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }

~ region/main.tf resource "aws_vpc" "vpc-test-region" {
@@ -6,6 +6,2 @@
    instance_tenancy = "default"
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }"
`;

exports[`AwsMultiAzRegionModule UT should handle moduleId change 1`] = `
"- region-1/main.tf
provider "aws" {
  alias = "123-us-east-1"
  region = "us-east-1"
}

- region-1/main.tf
resource "aws_internet_gateway" "igw-test-region" {
  provider = aws.123-us-east-1
  vpc_id = aws_vpc.vpc-test-region.id
}

- region-1/main.tf
resource "aws_vpc" "vpc-test-region" {
  provider = aws.123-us-east-1
  cidr_block = "10.0.0.0/8"
  enable_dns_hostnames = true
  enable_dns_support = true
  instance_tenancy = "default"
}

- region-1/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- region-1/outputs.tf
output "igw-test-region-InternetGatewayArn" {
  value = aws_internet_gateway.igw-test-region.arn
}

- region-1/outputs.tf
output "igw-test-region-InternetGatewayId" {
  value = aws_internet_gateway.igw-test-region.id
}

- region-1/outputs.tf
output "vpc-test-region-VpcArn" {
  value = aws_vpc.vpc-test-region.arn
}

- region-1/outputs.tf
output "vpc-test-region-VpcId" {
  value = aws_vpc.vpc-test-region.id
}

- region-1/terragrunt.hcl
<empty>

- region-1/variables.tf
<empty>

+ region-2/main.tf
provider "aws" {
  alias = "123-us-east-1"
  region = "us-east-1"
}

+ region-2/main.tf
resource "aws_internet_gateway" "igw-test-region" {
  provider = aws.123-us-east-1
  vpc_id = aws_vpc.vpc-test-region.id
}

+ region-2/main.tf
resource "aws_vpc" "vpc-test-region" {
  provider = aws.123-us-east-1
  cidr_block = "10.0.0.0/8"
  enable_dns_hostnames = true
  enable_dns_support = true
  instance_tenancy = "default"
}

+ region-2/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

+ region-2/outputs.tf
output "igw-test-region-InternetGatewayArn" {
  value = aws_internet_gateway.igw-test-region.arn
}

+ region-2/outputs.tf
output "igw-test-region-InternetGatewayId" {
  value = aws_internet_gateway.igw-test-region.id
}

+ region-2/outputs.tf
output "vpc-test-region-VpcArn" {
  value = aws_vpc.vpc-test-region.arn
}

+ region-2/outputs.tf
output "vpc-test-region-VpcId" {
  value = aws_vpc.vpc-test-region.id
}

+ region-2/terragrunt.hcl
<empty>

+ region-2/variables.tf
<empty>"
`;
